# agent-platform

./: .dockerignore  .gitignore  AGENT.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  NEXT.md  NOTICE  README.md  TODO.md  docker-compose.yml  framework-comparison.txt
docs/superpowers/plans/: 2026-04-17-conversational-wizard-phase1.md  2026-04-18-guardrail-v2.md  2026-04-18-llm-guardrail-and-quality.md
docs/superpowers/specs/: 2026-04-17-conversational-wizard-design.md  2026-04-18-guardrail-v2-design.md  2026-04-18-llm-guardrail-and-quality-design.md
docs/templates/: 01-simple-chat.json  02-daily-digest-cron.json  03-python-coding-helper.json  04-email-triage.json  05-web-monitor.json  06-system-healthcheck.json  07-rag-knowledge-base.json  README.md
modules/: README.md
modules/agent_meta/: module.py
modules/duckduckgo_search/: module.py
modules/editor/: module.py
modules/healthcheck/: module.py
modules/imap/: module.py
modules/mailstore/: module.py
modules/module_builder/: module.py
modules/pop3/: module.py
modules/smtp/: module.py
modules/sysinfo/: module.py
modules/taskloop/: module.py
modules/tavily/: config.example.json  module.py
modules/templates/: benchmark_prompts.json  chat.txt  filesystem.txt  notify.txt  shell.txt  websearch.txt  wizard.txt
src/: benchmark.rs  chat.html  cycle.rs  frontend.html  guardrail.rs  llm.rs  loader.rs  main.rs  pipeline.rs  security.rs  setup.html  store.rs  tools.rs  types.rs  util.rs  watchdog.rs  web.rs  wizard.html  wizard.rs
src/modules/: files.rs  mod.rs  rag.rs  web.rs
tools/: konklave.sh
